--- a/Style.css
+++ b/Style.css
@@ -63,3 +63,44 @@ p a {
 p a:hover {
     text-decoration: underline;
 }
+
+header {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+}
+
+nav ul li {
+    margin: 0 20px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+main { 
+    padding: 20px;
+}
+
+.contenido {
+    display: none;
+}
+
+.active {
+    display: block;
+}
